--- a/src/main/resources/templates/peoplenumber/pulic/html/smoke.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/smoke.html
@@ -3,16 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.staticfile.org/echarts/4.3.0/echarts.min.js"></script>
-    <script src="../../../../static/assets/js/jquery.js"></script>
-    <script src="../../../../static/assets/js/bootstrap.min.js"></script>
+    <script src="../static/assets/js/jquery.js"></script>
+    <script src="../static/assets/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../../../static/css/RiskControll.css">
+    <link rel="stylesheet" href="../static/css/RiskControll.css">
     <link href="http://code.jquery.com/ui/1.10.4/themes/ui-darkness/jquery-ui.css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <link rel="stylesheet" href="../../../../static/assets/css/nav.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="../static/assets/css/nav.css" type="text/css" media="all" />
     <title>Document</title>
     
 </head>
@@ -28,7 +28,7 @@
                 <b ><span>后台管理系统</span></b>
             </div>
             <div class="contact">
-                <p ><a href="Login.html">退出登录</a></p>
+                <p ><a href="http://121.199.21.197:63392/Login">退出登录</a></p>
             </div>
         </div>
     </header>
@@ -37,10 +37,10 @@
     <nav id="navigation">
         <div class="shell" style="margin-top: 0;padding-top: 0;height: 62px;background-color: white;width: 100%;color: black">
             <ul style="margin-left: 10%">
-                <li class=""><a href="RiskControll.html" ><span class="glyphicon glyphicon-home"></span><b>展示首页</b></a></li>
-                <li><a href="date.html"><span class="glyphicon glyphicon-list-alt"></span><b>按时间搜索</b></a></li>
-                <li><a href="smoke.html" style="color: #0FB9EF"><span class="glyphicon glyphicon-tint"></span><b>查看烟感数据</b></a></li>
-                <li><a href="live.html"><span class="glyphicon glyphicon-sort"></span><b>活跃度范围设置</b></a></li>
+                <li class=""><a href="http://121.199.21.197:63392/RiskControll" ><span class="glyphicon glyphicon-home"></span><b>展示首页</b></a></li>
+                <li><a href="http://121.199.21.197:63392/date"><span class="glyphicon glyphicon-list-alt"></span><b>按时间搜索</b></a></li>
+                <li><a href="http://121.199.21.197:63392/smoke" style="color: #0FB9EF"><span class="glyphicon glyphicon-tint"></span><b>查看烟感数据</b></a></li>
+                <li><a href="http://121.199.21.197:63392/live"><span class="glyphicon glyphicon-sort"></span><b>活跃度范围设置</b></a></li>
             </ul>
         </div>
     </nav>
@@ -48,5 +48,5 @@
 
     <div id="line" style="margin: 20px auto;width: 900px;height: 500px;margin-top: 170px; "></div>
 </body>
-<script src="../../../../static/js/main2.js"></script>
+<script src="../static/js/main2.js"></script>
 </html>
