--- a/src/main/resources/static/css/RiskControll.css
+++ b/src/main/resources/static/css/RiskControll.css
@@ -113,3 +113,18 @@ select{
     right: 50px;
     top: 250px;
 }
+#addrname{
+    margin-bottom: 55px;
+    margin-top: 155px;
+    text-align: left;
+    margin-left: 11%;
+    font-size: 18px;
+    /*float: left;*/
+    width:100%;
+}
+#pselect{
+    width: 20%;
+    border: none;
+    font-size: 18px;
+    background-color: transparent;
+}
