--- a/src/main/resources/templates/peoplenumber/pulic/html/Login.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/Login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../../../../static/assets/css/Login.css">
+    <link rel="stylesheet" href="../static/assets/css/Login.css">
     　　<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
 
 
@@ -28,7 +28,7 @@
     <div class="login_body l_clear">
         <div class="login_form l_float">
             <div class="login_top">
-                <img src="../../../../static/assets/imgs/logo_z.svg" alt="" class=""><span style="font-size: 26px;margin-left: 14px;">登录</span>
+                <img src="../static/assets/imgs/logo_z.svg" alt="" class=""><span style="font-size: 26px;margin-left: 14px;">登录</span>
 
                 <div class="login_tags b_clear">
                     <span class="top_tag l_float active" onClick="PwdLogin()">管理员</span>
@@ -40,15 +40,15 @@
                     <div>
                         <label for="user_name">用户名</label>
                         <input type="text" name="" id="user_name" placeholder="用户名">
-                        <img src="../../../../static/assets/imgs/icons/user.svg">
+                        <img src="../static/assets/imgs/icons/user.svg">
                     </div>
                     <div>
                         <label for="user_pwd">密码</label>
                         <input type="password" name="" id="user_pwd" placeholder="密码">
-                        <img src="../../../../static/assets/imgs/icons/lock.svg">
+                        <img src="../static/assets/imgs/icons/lock.svg">
                     </div>
                     <div class="b_clear submit">
-                        <a href="http://121.199.21.197:63391/register" class="r_float" style="margin-left: 12px;">去注册</a>
+                        <a href="http://121.199.21.197:63392/resgister" class="r_float" style="margin-left: 12px;">去注册</a>
 
                         <button type="submit" id="g_Login">登&nbsp;&nbsp;录</button>
                         <a href="#" class="r_float">忘记密码？</a>
@@ -60,15 +60,15 @@
                     <div>
                         <label for="user_name1">用户名</label>
                         <input type="text" name="" id="user_name1" placeholder="用户名">
-                        <img src="../../../../static/assets/imgs/icons/user.svg">
+                        <img src="../static/assets/imgs/icons/user.svg">
                     </div>
                     <div>
                         <label for="user_pwd1">密码</label>
                         <input type="password" name="" id="user_pwd1" placeholder="密码">
-                        <img src="../../../../static/assets/imgs/icons/lock.svg">
+                        <img src="../static/assets/imgs/icons/lock.svg">
                     </div>
                     <div class="b_clear submit">
-                        <a href="resgister.html" class="r_float" style="margin-left: 12px;">去注册</a>
+                        <a href="http://121.199.21.197:63392/resgister" class="r_float" style="margin-left: 12px;">去注册</a>
                         <button type="submit" id="p_Login">登&nbsp;&nbsp;录</button>
                         <a href="" class="r_float" style="margin-left: 12px;">忘记密码？</a>
                     </div>
@@ -90,6 +90,6 @@
 
 </div>
 
-<script src="../../../../static/js/Login.js"></script>
+<script src="../static/js/Login.js"></script>
 </body>
 </html>
