--- a/src/main/resources/templates/peoplenumber/pulic/html/RiskControll.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/RiskControll.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.staticfile.org/echarts/4.3.0/echarts.min.js"></script>
-    <script src="../../../../static/assets/js/jquery.js"></script>
-    <script src="../../../../static/assets/js/bootstrap.min.js"></script>
+    <script src="../static/assets/js/jquery.js"></script>
+    <script src="../static/assets/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../../../static/css/RiskControll.css">
+    <link rel="stylesheet" href="../static/css/RiskControll.css">
     <link href="http://code.jquery.com/ui/1.10.4/themes/ui-darkness/jquery-ui.css" />
-    <link rel="stylesheet" href="../../../../static/assets/css/nav.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="../static/assets/css/nav.css" type="text/css" media="all" />
     <title>Document</title>
 </head>
 
@@ -23,7 +23,7 @@
                 <b ><span>后台管理系统</span></b>
             </div>
             <div class="contact">
-                <p ><a href="http://121.199.21.197:63391/login">退出登录</a></p>
+                <p ><a href="http://121.199.21.197:63392/Login">退出登录</a></p>
             </div>
         </div>
     </header>
@@ -32,105 +32,44 @@
     <nav id="navigation">
         <div class="shell" style="margin-top: 0;padding-top: 0;height: 62px;background-color: white;width: 100%;color: black">
             <ul style="margin-left: 10%">
-                <li class=""><a href="RiskControll.html" style="color: #0FB9EF"><span class="glyphicon glyphicon-home"
+                <li class=""><a href="http://121.199.21.197:63392/RiskControll" style="color: #0FB9EF"><span class="glyphicon glyphicon-home"
                  ></span><b>展示首页</b></a></li>
-                <li><a href="date.html" rel="noopener noreferren"><span class="glyphicon glyphicon-list-alt"></span><b>按时间搜索</b></a></li>
-                <li><a href="smoke.html"><span class="glyphicon glyphicon-tint"></span><b>查看烟感数据</b></a></li>
-                <li><a href="live.html" rel="noopener noreferren"><span class="glyphicon glyphicon-sort"></span><b>活跃度范围设置</b></a></li>
+                <li><a href="http://121.199.21.197:63392/date"><span class="glyphicon glyphicon-list-alt"></span><b>按时间搜索</b></a></li>
+                <li><a href="http://121.199.21.197:63392/smoke"><span class="glyphicon glyphicon-tint"></span><b>查看烟感数据</b></a></li>
+                <li><a href="http://121.199.21.197:63392/live"><span class="glyphicon glyphicon-sort"></span><b>活跃度范围设置</b></a></li>
             </ul>
         </div>
     </nav>
 </div>
-<!--<div id="sera" style="margin-left: 80px;margin-top: 60px;"><button id="search-smoke" type="button" class="btn btn-info">查看烟感数据</button>-->
-<!--<button id="revise" type="button" class="btn btn-info" data-toggle="modal"-->
-<!--        data-target="#myModal">活跃度范围设置</button>-->
-<!--&lt;!&ndash; 活跃度范围设置弹窗 &ndash;&gt;-->
-<!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"-->
-<!--     aria-hidden="true">-->
-<!--    <div class="modal-dialog">-->
-<!--        <div class="modal-content">-->
-<!--            <div class="modal-header">-->
-<!--                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">-->
-<!--                    &times;-->
-<!--                </button>-->
-<!--                <h4 class="modal-title" id="myModalLabel">-->
-<!--                    活跃度范围设置-->
-<!--                </h4>-->
-<!--            </div>-->
-<!--            <div class="modal-body">-->
-<!--                <div class="form-group">-->
-<!--                    <label for="name">红灯:</label>-->
-<!--                    <input type="text" class="form-control" id="name1">-->
-<!--                </div>-->
-<!--                <div class="form-group">-->
-<!--                    <label for="name">绿灯:</label>-->
-<!--                    <input type="text" class="form-control" id="name">-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div id="state" style="text-align: center"></div>-->
-<!--            <div class="modal-footer">-->
-<!--                <button type="button" class="btn btn-default" data-dismiss="modal">关闭-->
-<!--                </button>-->
-<!--                <button onclick="fanwei()" type="button" class="btn btn-primary">-->
-<!--                    保存-->
-<!--                </button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--&lt;!&ndash; 时间段选择 &ndash;&gt;-->
-<!--<div class="input-group input-daterange" id="container">-->
-<!--    <form class="form-inline">--><!--        <div>选择时间段：</div>-->
-<!--        <div class="form-group">-->
-<!--            <label class="sr-only" for="startDate"></label>-->
-<!--            <input type="date" class="form-control" placeholder="请选择开始日期" id="startDate" name="start" />-->
-<!--        </div>-->
-<!--        <span>至</span>-->
-<!--        <div class="form-group">-->
-<!--            <label class="sr-only" for="startDate"></label>-->
-<!--            <input type="date" class="form-control" placeholder="请选择结束日期" id="endDate" name="end" />-->
-<!--        </div>-->
-<!--        <div class="arrea">选择地区：</div>-->
-<!--        <div class="form-group">-->
-<!--            <div class="city">-->
-<!--                地区 <select name="" id="province">-->
-<!--                <option>请选择</option>-->
-<!--            </select>-->
-<!--                <select name="" id="city">-->
-<!--                    <option>请选择</option>-->
-<!--                </select>-->
-<!--                <select name="" id="country">-->
-<!--                    <option>请选择</option>-->
-<!--                </select>-->
-<!--                <div class="form-group">-->
-<!--                    <input  id="address" autocomplete="on" class="form-control"  placeholder="详细地址">-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--        </div>-->
-<!--        <button id="search" type="button" class="btn btn-default">查询</button>-->
-<!--    </form>-->
-<!--</div>-->
-<!--</div>-->
-<div class="row text-center" style="width: 100%;height: 500px;margin-top: 40px;z-index: -999">
-    <h2 style="margin-bottom: 55px;margin-top: 155px;" id="addrname"></h2>
+<div class="row " style="height: 500px;margin-top: 180px;z-index: -999">
+    <div id="">
     <div class="col-md-5" >
+        <div id="change">
+        <span id="aa" style="float:left;font-size: 18px;margin-left: 11%;margin-bottom: 60px;">当前是：</span>
+        </div>
+<!--        <ul class="breadcrumb" id="change" style="font-size: 18px;margin-left: 0px;float:left;">-->
+<!--            <li ><a onclick="a(0)" class="sel" style="color:#0FB9EF;" id="fixed">按固定时间段搜索</a></li>-->
+<!--            <li><a class="sel" id="continuation">按连续时间搜索</a></li>-->
+<!--        </ul>-->
+<!--        <input id="li" list="cars" class="form-control" id="li" type="search" style="width: 40%"/>-->
+<!--        <datalist id="cars">-->
+<!--        </datalist>-->
       <div id="bar" style="width: 700px; height: 500px;"></div>
     </div>
     <div class="col-md-offset-1 col-md-6">
         <div class="row">
-        <div class="col-md-6 col-sm-6 uu" >
-            <img class="plane" src="../../../../static/assets/img/plane1改.jpg" usemap="#Map">
+        <div class="col-md-6 col-sm-6 uu" style="margin-top: 80px;" >
+            <img id="picuter" class="plane" src="../static/assets/img/plane114.jpg" usemap="#Map">
             <map name="Map" id="Map" >
-                <area shape="circle" id="one" coords="160,155,40" href="javascript:a(0);" />
-                <area shape="circle" id="two" coords="150,400,30" href="javascript:a(2)" />
-                <area shape="circle" id="three" coords="120,360,30" href="javascript:a(1)"/>
+                <area shape="circle" id="one" coords="160,155,40" href="javascript:a(1);" />
+<!--                <area shape="circle" id="two" coords="150,400,30" href="javascript:a(2)" />-->
+<!--                <area shape="circle" id="three" coords="120,360,30" href="javascript:a(1)"/>-->
             </map>
         </div>
-        <div class="col-md-6 col-sm-6">
-            <img class="plane" src="../../../../static/assets/img/plane2改.jpg" usemap="#Map1" >
+        <div class="col-md-6 col-sm-6" style="margin-top: 80px;">
+            <img class="plane" src="../static/assets/img/plane214.jpg" usemap="#Map1" >
             <map name="Map1" id="Map1" >
-                <area shape="circle" id="four" coords="310,215,80" href="javascript:a(3);" />
+                <area shape="circle" id="four" coords="310,215,80" href="javascript:a(0);" />
             </map>
         </div>
 <!--    </div></div>-->
@@ -146,12 +85,12 @@
 <!--    </div>-->
 </body>
 
-<script src="../../../../static/assets/dataPicker/dist/js/bootstrap-datepicker.min.js"></script>
-<script src="../../../../static/assets/dataPicker/dist/locales/bootstrap-datepicker.zh-CN.min.js"></script>
+<script src="../static/assets/dataPicker/dist/js/bootstrap-datepicker.min.js"></script>
+<script src="../static/assets/dataPicker/dist/locales/bootstrap-datepicker.zh-CN.min.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js" ></script>
 <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js" ></script>
 <!--<script src="../js/address.js"></script>-->
-<script src="../../../../static/js/RiskControll.js"></script>
+<script src="../static/js/RiskControll.js"></script>
 <script>
 
 </script>
