--- a/src/main/resources/templates/peoplenumber/pulic/html/live.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/live.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.staticfile.org/echarts/4.3.0/echarts.min.js"></script>
-    <script src="../../../../static/assets/js/jquery.js"></script>
-    <script src="../../../../static/assets/js/bootstrap.min.js"></script>
+    <script src="../static/assets/js/jquery.js"></script>
+    <script src="../static/assets/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../../../static/css/RiskControll.css">
-    <link href="http://code.jquery.com/ui/1.10.4/themes/ui-darkness/jquery-ui.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <link rel="stylesheet" href="../../../../static/assets/css/nav.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="../static/css/RiskControll.css">
+    <link rel="stylesheet" href="../static/css/date.css">
+<!--    <link href="http://code.jquery.com/ui/1.10.4/themes/ui-darkness/jquery-ui.css" />-->
+<!--    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />-->
+<!--    <script src="http://code.jquery.com/jquery-1.12.4.js"></script>/-->
+<!--    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
+    <link rel="stylesheet" href="../static/assets/css/nav.css" type="text/css" media="all" />
+    <script src="../static/js/jquery.autocomplete.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
             </div>
             <div class="contact">
 
-                <p ><a href="Login.html">退出登录</a></p>
+                <p ><a href="http://121.199.21.197:63392/Login">退出登录</a></p>
             </div>
         </div>
     </header>
@@ -35,53 +36,73 @@
     <nav id="navigation">
         <div class="shell" style="margin-top: 0;padding-top: 0;height: 62px;background-color: white;width: 100%;color: black">
             <ul style="margin-left: 10%">
-                <li class=""><a href="RiskControll.html" ><span class="glyphicon glyphicon-home"></span><b>展示首页</b></a></li>
-                <li><a href="date.html"><span class="glyphicon glyphicon-list-alt"></span><b>按时间搜索</b></a></li>
-                <li><a href="smoke.html"><span class="glyphicon glyphicon-tint"></span><b>查看烟感数据</b></a></li>
-                <li><a href="live.html"  style="color: #0FB9EF"
+                <li class=""><a href="http://121.199.21.197:63392/RiskControll" ><span class="glyphicon glyphicon-home"></span><b>展示首页</b></a></li>
+                <li><a href="http://121.199.21.197:63392/date"><span class="glyphicon glyphicon-list-alt"></span><b>按时间搜索</b></a></li>
+                <li><a href="http://121.199.21.197:63392/smoke"><span class="glyphicon glyphicon-tint"></span><b>查看烟感数据</b></a></li>
+                <li><a href="http://121.199.21.197:63392/live"  style="color: #0FB9EF"
                 ><span class="glyphicon glyphicon-sort"></span><b>活跃度范围设置</b></a></li>
             </ul>
         </div>
     </nav>
 </div>
-<div style="margin-top: 180px;margin-left: 10%;margin-right: 10%;">
+<div class="row">
+    <div class="col-md-5 col-sm-12 ">
+        <div class="area">
+            <img  class="img" src="../static/assets/img/plane1改.jpg" >
+<!--            <img class="img"  src="../../assets/img/plane2改.jpg">-->
+        </div>
+    </div>
+    <div class="col-md-6 col-sm-12">
+<div class="area">
+    <p class="arrea">选择地区：</p>
+    <div class="form-group ">
+        <div class="city">
+            <select name="" id="city" class="form-control select" >
+                <option value="null">请选择</option>
+            </select>
+            <select name="" id="country" class="form-control select">
+                <option value="null">请选择</option>
+            </select>
+            <select name="" id="town" class="form-control select">
+                <option value="null">请选择</option>
+            </select>
+            <select name="" id="street" class="form-control select">
+                <option value="null">请选择</option>
+            </select>
+
+                <div class="form-group">
+                    <input  id="special_address"
+                            list="auto"
+                            style=" margin: 5px;"
+                            class="form-control"
+                            placeholder="详细地址">
+                    <datalist id="auto">
+                        <option></option>
+                    </datalist>
+                    <select name="" id="box" class="form-control select" style="width:100%">
+                        <option value="null">请选择</option>
+                    </select>
+<!--                    <input  id="box" autocomplete="on" style=" margin: 5px;" class="form-control"  placeholder="盒子名称">-->
+            </div>
+        </div>
+
+    </div>
 <div class="form-group">
-    <label for="red">红灯的数值</label>
+    <label for="red">当前盒子对应红灯的数值</label>
     <input type="number" class="form-control" id="red" placeholder="">
 </div>
     <div class="form-group">
-    <label for="green">绿灯的数值</label>
+    <label for="green">当前盒子对应绿灯的数值</label>
     <input type="number" class="form-control" id="green" placeholder="">
     </div>
     <button id="search" type="button" class="btn form-control  btn-primary" style="margin-top: 20px;"
     onclick="fanwei()">保存当前数值</button>
+</div>
+    </div>
 
 </div>
-<script>
-    const BASE_URL = 'http://121.199.21.197:63391'
+<script src="../static/js/live.js"></script>
+    <script src="../static/js/address.js"></script>
 
-    //设置范围值
-    function  fanwei() {
-
-        let red=document.getElementById("red").value;
-        let green=document.getElementById("green").value;
-        console.log(red)
-        $.ajax({
-            url: `${BASE_URL}`+"/insertColorValue",
-            method:'post',
-            data:'{"red":"'+red+'","green":"'+green+'"}',
-            contentType:"application/json",
-            success: (res) => {
-                // console.log("ssssssssssokla")
-                alert("保存成功！")
-                // document.getElementById('state').innerHTML = "保存成功！";
-                // $('#state').hidden
-            }
-        })
-
-        console.log('{"red":"'+red+'","green":"'+green+'"}');
-    }
-
-</script>
 </body>
 </html>
