--- a/src/main/resources/templates/peoplenumber/pulic/html/resgister.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/resgister.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../../../../static/assets/css/Login.css">
+    <link rel="stylesheet" href="../static/assets/css/Login.css">
     　　<script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
@@ -14,22 +14,23 @@
 <style>
     .select{
         height: 30px;
-        width: 32%;
+        width: 48%;
+        margin-top: 8px;
     }
     .addr{
         height: 30px;
         width: 100%;
-        margin-top: 6px;
+        /*margin-top: 6px;*/
     }
 
 </style>
 <body>
 
 <div class="container">
-    <div class="login_body l_clear" style="margin-top: 39px;">
+    <div class="login_body l_clear" style="margin-top: 12px;">
         <div class="login_form l_float">
             <div class="login_top">
-                <img src="../../../../static/assets/imgs/logo_z.svg" alt="" class=""><span style="font-size: 26px;margin-left: 14px;">注册</span>
+                <img src="../static/assets/imgs/logo_z.svg" alt="" class=""><span style="font-size: 26px;margin-left: 14px;">注册</span>
 
                 <div class="login_tags b_clear">
                     <span class="top_tag l_float active" onClick="PwdLogin()">管理员</span>
@@ -41,36 +42,48 @@
                     <div>
                         <label for="user_name1">用户名</label>
                         <input type="text" name="" id="user_name1" placeholder="用户名">
-                        <img src="../../../../static/assets/imgs/icons/user.svg">
+                        <img src="../static/assets/imgs/icons/user.svg">
                     </div>
                     <div>
                         <label for="user_pwd1">密码</label>
                         <input type="password" name="" id="user_pwd1" placeholder="密码">
-                        <img src="../../../../static/assets/imgs/icons/lock.svg">
+                        <img src="../static/assets/imgs/icons/lock.svg">
                         <p class="tips hidden">请检查您的密码</p>
                     </div>
 
                     <div class="form-group">
                         <label for="user_pwd1">地区</label>
                         <div class="city form-control">
-                            <select name="" id="province" class="form-control select">
-                                <option>请选择</option>
+                            <select name="" id="city" class="form-control select" >
+                                <option value="null">请选择</option>
                             </select>
-                            <select name="" id="city" class="select">
-                                <option>请选择</option>
+                            <select name="" id="country" class="form-control select">
+                                <option value="null">请选择</option>
                             </select>
-                            <select name="" id="country" class="select">
-                                <option>请选择</option>
+                            <select name="" id="town" class="form-control select">
+                                <option value="null">请选择</option>
                             </select>
+                            <select name="" id="street" class="form-control select">
+                                <option value="null">请选择</option>
+                            </select>
+
                             <div class="form-group">
-                                <input  id="address" class="form-control addr"  placeholder="详细地址">
-                            </div>
+                                <input  id="special_address"
+                                        list="auto"
+                                        placeholder="详细地址"
+                                        style=" margin: 5px;"
+                                        value="null"
+                                        class="form-control addr"
+                                        >
+                                <datalist id="auto">
+                                    <option></option>
+                                </datalist>                            </div>
                         </div>
                     </div>
                     <div class="b_clear submit">
 
                         <button type="submit" id="g_res">立即注册</button>
-                        <a href="http://121.199.21.197:63391/login" class="r_float">已有帐号？去登陆</a>
+                        <a href="http://121.199.21.197:63392/Login" class="r_float">已有帐号？去登陆</a>
                     </div>
                 </div>
             </div>
@@ -80,48 +93,59 @@
                     <div>
                         <label for="user_name2">用户名</label>
                         <input type="text" name="" id="user_name2" placeholder="用户名">
-                        <img src="../../../../static/assets/imgs/icons/user.svg">
+                        <img src="../static/assets/imgs/icons/user.svg">
                     </div>
                     <div>
                         <label for="user_pwd2">密码</label>
                         <input type="password" name="" id="user_pwd2" placeholder="密码">
-                        <img src="../../../../static/assets/imgs/icons/lock.svg">
+                        <img src="../static/assets/imgs/icons/lock.svg">
                     </div>
 
                     <div class="form-group">
                         <label for="user_pwd1">地区</label>
                         <div class="city form-control">
-                            <select name="" id="province1" class="form-control select">
-                                <option>请选择</option>
+                            <select name="" id="city1" class="form-control select" >
+                                <option value="null">请选择</option>
                             </select>
-                            <select name="" id="city1" class="select">
-                                <option>请选择</option>
+                            <select name="" id="country1" class="form-control select">
+                                <option value="null">请选择</option>
                             </select>
-                            <select name="" id="country1" class="select">
-                                <option>请选择</option>
+                            <select name="" id="town1" class="form-control select">
+                                <option value="null">请选择</option>
                             </select>
+                            <select name="" id="street1" class="form-control select">
+                                <option value="null">请选择</option>
+                            </select>
+
                             <div class="form-group">
-                                <input  id="address1" class="form-control addr"  placeholder="详细地址">
-                            </div>
+                                <input  id="special_address1"
+                                        list="auto1"
+                                        style=" margin: 5px;"
+                                        value="null"
+                                        class="form-control addr"
+                                        placeholder="详细地址">
+                                <datalist id="auto1">
+                                    <option></option>
+                                </datalist>                            </div>
                         </div>
                     </div>
                     <div class="b_clear submit">
                         <button type="submit" id="p_res">立即注册</button>
-                        <a href="http://121.199.21.197:63391/login" class="r_float">已有帐号？去登陆</a>
+                        <a href="http://121.199.21.197:63392/Login" class="r_float">已有帐号？去登陆</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="login_ad l_float" id="AdImg" style="height: 527px">
+        <div class="login_ad l_float" id="AdImg" style="height: 577px">
         </div>
     </div>
 
 </div>
 <!--//选项卡切换-->
-<script src="../../../../static/js/Login.js"></script>
+<script src="../static/js/Login.js"></script>
 <!--//地址栏-->
-<script src="../../../../static/js/address.js"></script>
+<script src="../static/js/address.js"></script>
 <!--//登录请求-->
-<script src="../../../../static/js/resgister.js"></script>
+<script src="../static/js/resgister.js"></script>
 </body>
 </html>
